# flask-api-stock

./: pyproject.toml  readme.md
src/: app.py  config.py
src/controllers/: auth.py  auth_controller.py  delete_controller.py  dji_part.py  get_controller.py  post_controller.py  role.py  update_controller.py  user.py
src/models/: __init__.py  db.py  dji_part.py  models.py  role.py  user.py
src/services/: utils.py
src/views/: dji_part.py  role.py  user.py
